# ant-sdk

./: .gitignore  README.md  SECURITY.md  llms-full.txt  llms.txt  skill.md
.github/workflows/: auto-tag-go-submodules.yml  ci.yml  ffi-ci.yml  go-ci.yml  release.yml
ant-dev/: pyproject.toml
ant-dev/src/ant_dev/: __init__.py  cli.py  cmd_example.py  cmd_init.py  cmd_logs.py  cmd_playground.py  cmd_reset.py  cmd_start.py  cmd_status.py  cmd_stop.py  cmd_wallet.py  env.py  process.py
ant-dev/src/ant_dev/templates/csharp/: Program.cs.tmpl  Project.csproj.tmpl
ant-dev/src/ant_dev/templates/python/: main.py.tmpl  pyproject.toml.tmpl
antd/: Cargo.toml  README.md  build.rs  openapi.yaml
antd-cpp/: CMakeLists.txt  README.md
antd-cpp/examples/: 01-connect.cpp  02-data.cpp  03-chunks.cpp  04-files.cpp  05-graph.cpp  06-private-data.cpp
antd-cpp/include/antd/: antd.hpp  async_client.hpp  client.hpp  discover.hpp  errors.hpp  grpc_client.hpp  models.hpp
antd-cpp/src/: async_client.cpp  base64.cpp  base64.hpp  client.cpp  discover.cpp  grpc_client.cpp
antd-cpp/tests/: test_async_client.cpp  test_client.cpp  test_grpc_client.cpp  test_grpc_external_signer.cpp  test_grpc_wallet.cpp
antd-csharp/: Antd.sln  README.md  simple-test.ps1  simple-test.sh
antd-csharp/Antd.Sdk/: Antd.Sdk.csproj  AntdClientFactory.cs  AntdGrpcClient.cs  AntdRestClient.cs  DaemonDiscovery.cs  Exceptions.cs  IAntdClient.cs  Models.cs
antd-csharp/Antd.Sdk.Tests/: Antd.Sdk.Tests.csproj  GrpcClientTests.cs  GrpcWalletTests.cs  Program.cs  TestRunner.cs  UnitTests.cs
antd-csharp/Examples/: Examples.csproj  Program.cs
antd-dart/: README.md  pubspec.yaml
antd-dart/example/: 01_connect.dart  02_data.dart  03_chunks.dart  04_files.dart  05_graph.dart  06_private_data.dart  07_external_signer.dart
antd-dart/lib/: antd.dart
antd-dart/test/: client_test.dart  grpc_client_external_signer_test.dart  grpc_client_test.dart  grpc_wallet_test.dart
antd-dart/tool/: generate_proto.sh
antd-elixir/: .gitignore  README.md  mix.exs
antd-elixir/examples/: 01_connect.exs  02_data.exs  03_chunks.exs  04_files.exs  05_graph.exs  06_private_data.exs  07_external_signer.exs
antd-elixir/lib/: antd.ex
antd-go/: README.md  client.go  client_test.go  discover.go  discover_test.go  discover_unix.go  discover_windows.go  errors.go  go.mod  go.sum  grpc_client.go  grpc_client_test.go  integration_test.go  models.go
antd-java/: README.md  build.gradle.kts  settings.gradle.kts
antd-java/examples/: Example01Connect.java  (+6 more)
antd-js/: README.md  package-lock.json  package.json  tsconfig.json
antd-kotlin/: README.md  build.gradle.kts  settings.gradle.kts
antd-lua/: README.md  antd-scm-1.rockspec
antd-mcp/: README.md  pyproject.toml
antd-mcp/src/antd_mcp/: __init__.py  discover.py  errors.py  server.py
antd-mcp/tests/: test_server.py  test_server_renames.py
antd-php/: README.md  composer.json
antd-py/: README.md  pyproject.toml  simple-test.ps1  simple-test.sh
antd-py/examples/: 01_connect.py  02_data.py  03_chunks.py  04_files.py  05_graph.py  05_pointers.py  06_private_data.py  06_scratchpads.py  07_external_signer.py  07_graph.py  08_grpc.py  08_registers.py  09_vaults.py  10_private_data.py
antd-py/scripts/: generate_proto.py  test_grpc.py  test_rest.py
antd-py/src/antd/: __init__.py  _discover.py  _grpc.py  _rest.py  exceptions.py  models.py
antd-py/src/antd/_proto/antd/v1/: chunks_pb2.py  chunks_pb2.pyi  chunks_pb2_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  data_pb2.py  data_pb2.pyi  data_pb2_grpc.py  events_pb2.py  events_pb2.pyi  events_pb2_grpc.py  files_pb2.py  files_pb2.pyi  files_pb2_grpc.py  graph_pb2.py  graph_pb2.pyi  graph_pb2_grpc.py  health_pb2.py  health_pb2.pyi  health_pb2_grpc.py  pointers_pb2.py  pointers_pb2.pyi  pointers_pb2_grpc.py  registers_pb2.py  registers_pb2.pyi  registers_pb2_grpc.py  scratchpads_pb2.py  scratchpads_pb2.pyi  scratchpads_pb2_grpc.py  upload_pb2.py  upload_pb2.pyi  upload_pb2_grpc.py  vaults_pb2.py  vaults_pb2.pyi  vaults_pb2_grpc.py  wallet_pb2.py  wallet_pb2.pyi  wallet_pb2_grpc.py
antd-py/tests/: test_discover.py  test_grpc_client.py  test_grpc_wallet.py  test_integration.py  test_rest_client.py
antd-ruby/: README.md  antd.gemspec
antd-rust/: Cargo.toml  README.md  build.rs
antd-rust/examples/: 01-connect.rs  02-data.rs  03-chunks.rs  04-files.rs  05-graph.rs  06-private-data.rs  07-external-signer.rs  08-grpc.rs
antd-rust/src/: client.rs  discover.rs  errors.rs  grpc_client.rs  grpc_tests.rs  lib.rs  models.rs  tests.rs
antd-swift/: Package.swift  README.md
antd-zig/: README.md  build.zig  build.zig.zon
antd/proto/antd/v1/: chunks.proto  common.proto  data.proto  files.proto  graph.proto  health.proto  pointers.proto  registers.proto  scratchpads.proto  vaults.proto  wallet.proto
antd/resources/: bootstrap_peers.toml
antd/src/: config.rs  error.rs  evm_defaults.rs  main.rs  peers.rs  port_file.rs  state.rs  types.rs
antd/src/grpc/: mod.rs  service.rs
antd/src/rest/: chunks.rs  data.rs  events.rs  files.rs  graph.rs  mod.rs  pointers.rs  registers.rs  scratchpads.rs  upload.rs  vaults.rs  wallet.rs
deploy/: Dockerfile
docs/: architecture.md  external-signer-flow.md  external-signer-flow.py  missing-features.md  mobile-external-signer.md  quickstart-cpp.md  quickstart-csharp.md  quickstart-dart.md  quickstart-elixir.md  quickstart-java.md  quickstart-kotlin.md  quickstart-lua.md  quickstart-php.md  quickstart-python.md  quickstart-ruby.md  quickstart-rust.md  quickstart-swift.md  quickstart-zig.md  tutorial-key-value-store.md  tutorial-mutable-config.md  tutorial-store-retrieve.md
ffi/: .gitignore  README.md
ffi/rust/ant-ffi/: Cargo.toml
ffi/rust/ant-ffi/src/: client.rs  data.rs  files.rs  graph.rs  key_derivation.rs  keys.rs  lib.rs  network.rs  payment.rs  payments.rs  pointer.rs  register.rs  scratchpad.rs  vault.rs  wallet.rs
installers/: README.md
scripts/: full-stack-sweep.sh  integration-sweep.sh  kill-local.ps1  kill-local.sh  start-local.ps1  start-local.sh  test-api.ps1  test-api.sh
(+292 files in other folders)
