[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ant-dev"
version = "0.1.0"
description = "Developer CLI for ant-sdk: start testnet, run examples, scaffold projects"
requires-python = ">=3.10"
dependencies = [
    "antd[rest]",
    "httpx>=0.27",
]

[project.scripts]
ant = "ant_dev.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ant_dev"]
