[project]
name = "antd"
version = "0.1.0"
description = "Python SDK for the antd daemon (Autonomi network)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
rest = ["httpx>=0.27"]
grpc = ["grpcio>=1.60", "protobuf>=4.25"]
all = ["antd[rest,grpc]"]
dev = ["antd[all]", "grpcio-tools>=1.60"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antd"]
