[package]
name = "antd-client"
version = "0.1.0"
edition = "2021"
description = "Rust REST client SDK for the antd daemon — the gateway to the Autonomi decentralized network"
license = "MIT"
repository = "https://github.com/WithAutonomi/ant-sdk"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
mockito = "1"
tokio-stream = "0.1"

[[example]]
name = "01-connect"
path = "examples/01-connect.rs"

[[example]]
name = "02-data"
path = "examples/02-data.rs"

[[example]]
name = "03-chunks"
path = "examples/03-chunks.rs"

[[example]]
name = "04-files"
path = "examples/04-files.rs"

[[example]]
name = "06-private-data"
path = "examples/06-private-data.rs"
