[package]
name = "antd"
version = "0.11.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ant-core = { git = "https://github.com/WithAutonomi/ant-client", tag = "ant-cli-v0.2.11" }  # ant-core 0.3.1 release; data_download shrunk-DataMap resolve + block_in_place panic fix + quinn-proto RUSTSEC-2026-0185 (was 0.3.0 / ant-cli-v0.2.10)
self_encryption = "0.36.0"
evmlib = "0.8.1"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
bytes = "1"
base64 = "0.22"
blake3 = "1"
rmp-serde = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
futures = "0.3"
rand = "0.8"
postcard = { version = "1.1.3", features = ["use-std"] }
toml = "0.8"

[build-dependencies]
tonic-build = "0.12"

# Release profile tuned for binary size. Measured on antd (2026-06-09):
# Linux 36.5 MB -> 22.1 MB (-37%), Windows .exe 29.8 MB -> 24.6 MB (-17%).
# `strip` alone is the big, free win on Linux (debug symbols the .exe never
# needed); thin LTO + a single codegen unit add the rest and tend to improve
# runtime perf, at the cost of a slower release link (does not affect dev /
# `cargo build`). Both variants smoke-tested (launch + /health) on Linux and
# Windows.
[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
