[package]
name = "ant-ffi"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

# In-crate uniffi bindgen — invoked as `cargo run --bin uniffi-bindgen -- generate ...`.
# Keeps the bindgen pinned to the exact uniffi version the lib was compiled against,
# avoiding metadata-version drift between an external `uniffi-bindgen-cli` install
# and the runtime crate.
[[bin]]
# Note: NOT in src/bin/ because the monorepo root .gitignore has a top-level
# `bin/` rule (intended for C#/.NET output) that swallows any Rust bin tree.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[dependencies]
# Pinned to a released ant-client tag so the build is reproducible. Bump in
# lockstep with antd's ant-core where possible so the whole SDK ships on one
# core version. ant-core 0.3.1 (tag ant-cli-v0.2.11) keeps ant-protocol 2.2.2,
# so this bump is graph-safe; it picks up the data_download shrunk-DataMap
# resolve fix, a block_in_place panic fix in data_download, and the quinn-proto
# RUSTSEC-2026-0185 security bump. (antd still pins ant-cli-v0.2.10 / 0.3.0 on
# its own release lane; realign when antd next bumps.)
# Local iteration: temporarily override with `[patch.crates-io]` or a path dep
# in `.cargo/config.toml` (don't commit the override).
ant-core = { git = "https://github.com/WithAutonomi/ant-client", tag = "ant-cli-v0.2.11" }
# QuoteHash / TxHash / Amount used through ant_protocol::evm; pin must match
# ant-core's transitive ant-protocol version to avoid evmlib graph skew.
ant-protocol = "2.2.2"
bytes = "1"
hex = "0.4"
# Raw JSON-RPC for external-signer receipt/event reads (wait_for_receipt,
# merkle_winner_pool_hash). rustls so it cross-compiles to iOS/Android without
# a system OpenSSL. Already in the dep graph via evmlib.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "1"
serde_json = "1"
thiserror = "2"
url = "2"
zeroize = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
uniffi = { workspace = true, features = ["tokio", "cli"] }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[dev-dependencies]
# Verify the hardcoded MerklePaymentMade topic0 == keccak256(event signature).
tiny-keccak = { version = "2", features = ["keccak"] }
